finalizado html e css da pagina inicial

--- a/index/index.html
+++ b/index/index.html
@@ -9,7 +9,20 @@
 </head>
 <body>
     <aside>
-    
+        <div id="mySidenav" class="sidenav">
+            <a href="#" id="about">Sobre Mim <img src="../icons/outline_person_black_24dp.png"></a>
+            <a href="#" id="projects">Projetos &nbsp; &nbsp; <img id="pasta"src="../icons/outline_work_black_24dp.png"></a>
+            <a href="#" id="contact">Contatos &nbsp; &nbsp; <img id="celular"src="../icons/outline_call_black_24dp.png"></a>
+          </div>
     </aside>
+    <main>
+        <span id="marcellobox"></span>
+        <span id="cavazzabox"></span>
+        <p id="marcello">Marcello</p>
+        <p id="cavazza">Cavazza</p>
+    </main>
+    <footer>
+        A simplicidade é mostrar que com pouco fazemos muito..
+    </footer>
 </body>
 </html>
