linkei o arquivo index as outras paginas

--- a/index/index.html
+++ b/index/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,9 +10,9 @@
 <body>
     <aside>
         <div id="mySidenav" class="sidenav">
-            <a href="#" id="about">Sobre Mim <img src="../icons/outline_person_black_24dp.png"></a>
-            <a href="#" id="projects">Projetos &nbsp; &nbsp; <img id="pasta"src="../icons/outline_work_black_24dp.png"></a>
-            <a href="#" id="contact">Contatos &nbsp; &nbsp; <img id="celular"src="../icons/outline_call_black_24dp.png"></a>
+            <a href="..//about/about.html" id="about">Sobre Mim <img src="../icons/outline_person_black_24dp.png"></a>
+            <a href="../projects/projects.html" id="projects">Projetos &nbsp; &nbsp; <img id="pasta"src="../icons/outline_work_black_24dp.png"></a>
+            <a href="..//contact/contact.html" id="contact">Contatos &nbsp; &nbsp; <img id="celular"src="../icons/outline_call_black_24dp.png"></a>
           </div>
     </aside>
     <main>
