--- a/about/about.html
+++ b/about/about.html
@@ -4,9 +4,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="about.css">
+    <title>Sobre</title>
 </head>
 <body>
-    
+    <aside>
+        <a href="../index/index.html">
+            <img id="btnvoltar"src="../icons/outline_subdirectory_arrow_left_black_24dp.png" >
+        </a>
+        
+        <div id="profile">
+            <img id="me"src="me.png">
+            <p id="textme">Nome: Marcello H. Cavazza Oliveira<br>
+                Idade: 16<br>
+                Enderço: Bairro Sagrada Família<br>
+                MG-Belo Horizonte<br>
+            </p>
+            <p id="textescola">Formação Acadêmica:<br>
+                &nbsp;Ensino Médio Técnico em Informática–<br>
+              Cursando o 2° ano – Tarde - Colégio<br> 
+              Cotemig<br>
+              &nbsp;Ensino Fundamental – Colégio<br>
+              Batista Mineiro | Conclusão: 12/2019.
+              </p>
+            <a id="curriculolink" href="">
+                Currículo Detalhado
+            </a>
+        </div>
+    </aside>
+    <div>
+        <div id="competencias">
+            <p>Competências:</p>
+        </div>
+        <div id="compbox">
+            <p id="textcomp">-Inglês: Avançado – Cursando o Nível 10 do CCAA Idiomas. Certificado pela Escola Batista de Idiomas (EBI)<br>
+                -Curso de Designer Gráfico – Escola Zion – Módulo de illustrator concluído, metade feito de Photoshop.<br>
+                -HTML5/CSS/JavaScript - Domínio básico, em estudo.<br>
+                -Pacote Office e Google Docs. – Domínio intermediário.<br>
+                -Photoshop/Illustrator – Domínio intermediário.<br>
+                -Domínio em Git/GitHub- Certificado de 5 horas de estudo.<br>
+                -Domínio em Terminal Linux- Certificado de 10 horas de estudo.
+                </p>
+        </div>
+        <div id="objetivo">
+            <p>Objetivo:</p>
+        </div>
+        <div id="objbox">
+            <p id="textobj">
+                Estágio na área de Tecnologia da Informação no<br>
+                qual poderei colocar em prática e desenvolver os<br>
+                conhecimentos acadêmicos, preferencialmente na<br>
+                área de programação, front end ou back end.
+            </p>
+        </div>
+    </div>
 </body>
 </html>
