terminei a pasta projects

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -13,18 +13,58 @@
         <p>Projetos</p>
     </header>
     <main>
-        <div><div id="boxback1"></div><div id="boxfront1"></div></div>
-        <div><div id="boxback2"></div><div id="boxfront2"></div></div>
-        <div><div id="boxback3"></div><div id="boxfront3"></div></div>
+        <div>
+            <div id="boxback1">
+            </div>
+            <div id="boxfront1">
+                <div class="articleimage" style="background:url(projects_pics/project1.png)">
+                </div>
+                <p class="titleproject">
+                    Tabelas Responsivas
+                </p>
+                <form method="GET">
+                    <button type="button" onclick="window.open('https://github.com/MarcelloCavazza/siteresponsive')">Abrir Projeto</button>
+                </form>
+            </div>
+        </div>
+        <div>
+            <div id="boxback2">
+            </div>
+            <div id="boxfront2">
+                <div class="articleimage" style="background:url(projects_pics/project2.png)">
+                </div>
+                <div class="titleproject">
+                    
+                </div>
+                <form method="GET">
+                    <button type="button" onclick="window.open('')">Abrir Projeto</button>
+                </form>
+            </div>
+        </div>
+        <div>
+            <div id="boxback3">
+            </div>
+            <div id="boxfront3">
+                <div class="articleimage" style="background:url(projects_pics/project3.png)">
+                </div>
+                <div class="titleproject">
+                    
+                </div>
+                <div class="boxbtn">
+                    <form method="GET">
+                        <button type="button" onclick="window.open('')">Abrir Projeto</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
         <div id="btngit">
-            <div id="divgit"></div>
-            <a id="linkgit"href="https://github.com/MarcelloCavazza?tab=repositories">Mais Projetos</a>
+            <a id="linkgit"href="https://github.com/MarcelloCavazza?tab=repositories" target="_blank">Mais Projetos</a>
         </div>
         <div id="btnvoltar">
             <div id="divolt"></div>
-            <a id="linkhome"href="../index/index.html">Voltar ao Início</a>
+            <a id="linkhome"href="../index/index.html" >Voltar ao Início</a>
         </div>
     </footer>
 </body>
