estilizei a pagina about novamente

--- a/about/about.html
+++ b/about/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,17 +10,17 @@
 <body>
     <aside>
         <a href="../index/index.html">
-            <img id="btnvoltar"src="../icons/outline_subdirectory_arrow_left_black_24dp.png" >
+            <img id="btnvoltar"src="../icons/outline_subdirectory_arrow_left_white_24dp.png" >
         </a>
         
         <div id="profile">
             <img id="me"src="me.png">
-            <p id="textme">Nome: Marcello H. Cavazza Oliveira<br>
-                Idade: 16<br>
-                Enderço: Bairro Sagrada Família<br>
+            <p id="textme"><span class="bold">Nome:</span> Marcello H. Cavazza Oliveira<br>
+                <span class="bold">Idade:</span> 16<br>
+                <span class="bold">Enderço:</span> Bairro Sagrada Família<br>
                 MG-Belo Horizonte<br>
             </p>
-            <p id="textescola">Formação Acadêmica:<br>
+            <p id="textescola"><span class="bold">Formação Acadêmica:</span><br>
                 &nbsp;Ensino Médio Técnico em Informática–<br>
               Cursando o 2° ano – Tarde - Colégio<br> 
               Cotemig<br>
