arrumando link do curriculo

--- a/about/about.html
+++ b/about/about.html
@@ -27,7 +27,7 @@
               &nbsp;Ensino Fundamental – Colégio<br>
               Batista Mineiro | Conclusão: 12/2019.
               </p>
-            <a id="curriculolink" href="https://docs.google.com/document/u/2/d/e/2PACX-1vQFxMu24_UCi5Z5ifZtYqayo-I1SefMh5uYGJ0t9P1LwgO7pUyJsVtK5fho8qgmnuJYtzEE0SW5nFgX/pub">
+            <a id="curriculolink" href="https://docs.google.com/document/u/2/d/e/2PACX-1vQFxMu24_UCi5Z5ifZtYqayo-I1SefMh5uYGJ0t9P1LwgO7pUyJsVtK5fho8qgmnuJYtzEE0SW5nFgX/pub" target="_blank">
                 Currículo Detalhado
             </a>
         </div>
