--- a/index/index.html
+++ b/index/index.html
@@ -5,24 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="../icons/icontabtop.png">
     <title>Marcello Cavazza</title>
 </head>
 <body>
-    <aside>
-        <div id="mySidenav" class="sidenav">
-            <a href="../about/about.html" id="about">Sobre Mim <img src="../icons/outline_person_black_24dp.png"></a>
-            <a href="../projects/projects.html" id="projects">Projetos &nbsp; &nbsp; <img id="pasta"src="../icons/outline_work_black_24dp.png"></a>
-            <a href="../contact/contact.html" id="contact">Contatos &nbsp; &nbsp; <img id="arroba"src="../icons/baseline_alternate_email_black_18dp.png"></a>
-          </div>
-    </aside>
-    <main>
-        <span id="marcellobox"></span>
-        <span id="cavazzabox"></span>
-        <p id="marcello">Marcello</p>
-        <p id="cavazza">Cavazza</p>
+    <header class="row">
+        <a href="../projects/projects.html" id="project" class="col-ex-2 boxicons">
+            <img class="iconstopbar"src="../icons/outline_work_black_24dp.png">
+        </a>
+        <a href="../about/about.html" id="about" class="col-ex-2 boxicons">
+            <img class="iconstopbar"src="../icons/outline_person_black_24dp.png">
+        </a>
+        <a href="../contact/contact.html" id="contact" class="col-ex-2 boxicons">
+            
+            <img class="iconstopbar"src="../icons/arroba.png">
+        </a>
+    </header>
+    <main class="row">
+        <span id="boxmarcello" class="backbox .col-ex-2"></span>
+        <div id="txtmarcello" class="maintxt .col-ex-2">Marcello</div>
+        <span id="boxcavazza" class="backbox .col-ex-2"></span>
+        <div id="txtcavazza" class="maintxt .col-ex-2">Cavazza</div>
     </main>
-    <footer>
-        A simplicidade é mostrar que com pouco fazemos muito..
+    <footer class="row">
+        <span class="motivationtxt .col-ex-2" id="stylemotivation">
+            A simplicidade é mostrar que com pouco fazemos muito
+        </span>
     </footer>
 </body>
 </html>
