--- a/index/index.html
+++ b/index/index.html
@@ -10,25 +10,25 @@
 </head>
 <body>
     <header class="row">
-        <a href="../projects/projects.html" id="project" class="col-ex-2 boxicons">
+        <a href="../projects/projects.html" id="project" class="col-ex-2 boxicons col-s-2">
             <img class="iconstopbar"src="../icons/outline_work_black_24dp.png">
         </a>
-        <a href="../about/about.html" id="about" class="col-ex-2 boxicons">
+        <a href="../about/about.html" id="about" class="col-ex-2 boxicons col-s-2">
             <img class="iconstopbar"src="../icons/outline_person_black_24dp.png">
         </a>
-        <a href="../contact/contact.html" id="contact" class="col-ex-2 boxicons">
+        <a href="../contact/contact.html" id="contact" class="col-ex-2 boxicons col-s-2">
             
             <img class="iconstopbar"src="../icons/arroba.png">
         </a>
     </header>
     <main class="row">
-        <span id="boxmarcello" class="backbox .col-ex-2"></span>
-        <div id="txtmarcello" class="maintxt .col-ex-2">Marcello</div>
-        <span id="boxcavazza" class="backbox .col-ex-2"></span>
-        <div id="txtcavazza" class="maintxt .col-ex-2">Cavazza</div>
+        <span id="boxmarcello" class="backbox .col-ex-2 col-s-2"></span>
+        <div id="txtmarcello" class="maintxt .col-ex-2 col-s-2">Marcello</div>
+        <span id="boxcavazza" class="backbox .col-ex-2 col-s-2"></span>
+        <div id="txtcavazza" class="maintxt .col-ex-2 col-s-2">Cavazza</div>
     </main>
     <footer class="row">
-        <span class="motivationtxt .col-ex-2" id="stylemotivation">
+        <span class="motivationtxt .col-ex-2 col-s-3" id="stylemotivation">
             A simplicidade é mostrar que com pouco fazemos muito
         </span>
     </footer>
