--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <aside>
         <div id="mySidenav" class="sidenav">
-            <a href="../about/about.html" id="about">Sobre Mim <img src="../icons/outline_person_black_24dp.png"></a>
-            <a href="../projects/projects.html" id="projects">Projetos &nbsp; &nbsp; <img id="pasta"src="../icons/outline_work_black_24dp.png"></a>
-            <a href="../contact/contact.html" id="contact">Contatos &nbsp; &nbsp; <img id="arroba"src="../icons/baseline_alternate_email_black_18dp.png"></a>
+            <a href="about/about.html" id="about">Sobre Mim <img src="icons/outline_person_black_24dp.png"></a>
+            <a href="projects/projects.html" id="projects">Projetos &nbsp; &nbsp; <img id="pasta"src="icons/outline_work_black_24dp.png"></a>
+            <a href="contact/contact.html" id="contact">Contatos &nbsp; &nbsp; <img id="arroba"src="icons/baseline_alternate_email_black_18dp.png"></a>
           </div>
     </aside>
     <main>
