--- a/about/about.html
+++ b/about/about.html
@@ -9,23 +9,18 @@
 </head>
 <body>
     <aside>
-        <a href="../index/index.html">
+        <a href="../index.html">
             <img id="btnvoltar"src="../icons/outline_subdirectory_arrow_left_white_24dp.png" >
         </a>
         
         <div id="profile">
-            <img id="me"src="me.png">
+            <img id="me"src="me.jpg">
             <p id="textme"><span class="bold">Nome:</span> Marcello H. Cavazza Oliveira<br>
-                <span class="bold">Idade:</span> 16<br>
-                <span class="bold">Enderço:</span> Bairro Sagrada Família<br>
-                MG-Belo Horizonte<br>
+                <span class="bold">Idade:</span> 19<br>
+                <span class="bold">Região:</span> Belo Horizonte - MG<br>
             </p>
             <p id="textescola"><span class="bold">Formação Acadêmica:</span><br>
-                &nbsp;Ensino Médio Técnico em Informática–<br>
-              Cursando o 2° ano – Tarde - Colégio<br> 
-              Cotemig<br>
-              &nbsp;Ensino Fundamental – Colégio<br>
-              Batista Mineiro | Conclusão: 12/2019.
+                &nbsp;Ensino Médio Técnico em Informática Colégio Cotemig<br>
               </p>
             <a id="curriculolink" href="https://docs.google.com/document/u/2/d/e/2PACX-1vQFxMu24_UCi5Z5ifZtYqayo-I1SefMh5uYGJ0t9P1LwgO7pUyJsVtK5fho8qgmnuJYtzEE0SW5nFgX/pub" target="_blank">
                 Currículo Detalhado
