--- a/contact/contact.html
+++ b/contact/contact.html
@@ -20,11 +20,6 @@
         <div>
             <p id="redestitle">Redes Sociais:</p>
             <div>
-                <div>
-                    <a href="https://www.instagram.com/cavatsza/" target="_blank"> 
-                        <img src="../icons/instagram-round-icon-png-14.png" id="instagramicon"><span id="instagramid">cavatsza</span><br>
-                    </a>
-                </div>
                 <div >
                     <a href="https://www.linkedin.com/in/marcello-henrique-cavazza-oliveira-b5a978201/" target="_blank">
                                         <img src="../icons/61109.png" id="linkedinicon"><span id="linkedinid">Marcello H. Cavazza</span>
@@ -41,7 +36,7 @@
         </div>
     </main>
     <footer>
-        <a href="../index/index.html">
+        <a href="../index.html">
             <p>Voltar ao Menu</p>
         </a>
     </footer>
