--- a/projects/projects.html
+++ b/projects/projects.html
@@ -63,7 +63,7 @@
             <a id="linkgit"href="https://github.com/MarcelloCavazza?tab=repositories" target="_blank">Mais Projetos</a>
         </div>
         <div id="btnvoltar">
-            <a id="linkhome"href="../index/index.html" >Voltar ao Início</a>
+            <a id="linkhome" href="../index.html" >Voltar ao Início</a>
         </div>
     </footer>
 </body>
