--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="sideNav.css">
     <title>Marcello Cavazza</title>
 </head>
 <body>
@@ -16,10 +17,7 @@
           </div>
     </aside>
     <main>
-        <span id="marcellobox"></span>
-        <span id="cavazzabox"></span>
-        <p id="marcello">Marcello</p>
-        <p id="cavazza">Cavazza</p>
+        <p id="name">Marcello Cavazza</p>
     </main>
     <footer>
         A simplicidade é mostrar que com pouco fazemos muito..
