--- a/about/about.html
+++ b/about/about.html
@@ -11,19 +11,12 @@
 <body>
     <aside>
         <div id="mySidenav" class="sidenav">
-            <a href="about/about.html" id="activeNavSide">Sobre Mim <img src="../icons/outline_person_black_24dp.png"></a>
-            <a href="projects/projects.html" id="projects">Projetos &nbsp; &nbsp; <img id="pasta"src="../icons/outline_work_black_24dp.png"></a>
-            <a href="contact/contact.html" id="contact">Contatos &nbsp; &nbsp; <img id="arroba"src="../icons/baseline_alternate_email_black_18dp.png"></a>
-          </div>
+            <a href="../about/about.html" id="about" class="activeNavSide">Sobre Mim <img src="../icons/outline_person_black_24dp.png"></a>
+            <a href="../projects/projects.html" id="projects">Projetos &nbsp; &nbsp; <img id="pasta"src="../icons/outline_work_black_24dp.png"></a>
+            <a href="../contact/contact.html" id="contact">Contatos &nbsp; &nbsp; <img id="arroba"src="../icons/baseline_alternate_email_black_18dp.png"></a>
+        </div>
     </aside>
-    <aside>
-        <!-- <a href="../index.html">
-            <img id="btnvoltar"src="../icons/outline_subdirectory_arrow_left_white_24dp.png" >
-        </a> -->
-        
-        
-    </aside>
-    <div>
+    <main>
         <div id="profile">
             <img id="me"src="me.jpg">
             <p id="textme"><span class="bold">Nome:</span> Marcello H. Cavazza Oliveira<br>
@@ -37,30 +30,32 @@
                 Currículo Detalhado
             </a>
         </div>
-        <div id="competencias">
-            <p>Competências:</p>
-        </div>
-        <div id="compbox">
-            <p id="textcomp">-Inglês: Avançado – Cursando o Nível 10 do CCAA Idiomas. Certificado pela Escola Batista de Idiomas (EBI)<br>
-                -Curso de Designer Gráfico – Escola Zion – Módulo de illustrator concluído, metade feito de Photoshop.<br>
-                -HTML5/CSS/JavaScript - Domínio básico, em estudo.<br>
-                -Pacote Office e Google Docs. – Domínio intermediário.<br>
-                -Photoshop/Illustrator – Domínio intermediário.<br>
-                -Domínio em Git/GitHub- Certificado de 5 horas de estudo.<br>
-                -Domínio em Terminal Linux- Certificado de 10 horas de estudo.
+        <div>
+            <div id="competencias">
+                <p>Competências:</p>
+            </div>
+            <div id="compbox">
+                <p id="textcomp">-Inglês: Avançado – Cursando o Nível 10 do CCAA Idiomas. Certificado pela Escola Batista de Idiomas (EBI)<br>
+                    -Curso de Designer Gráfico – Escola Zion – Módulo de illustrator concluído, metade feito de Photoshop.<br>
+                    -HTML5/CSS/JavaScript - Domínio básico, em estudo.<br>
+                    -Pacote Office e Google Docs. – Domínio intermediário.<br>
+                    -Photoshop/Illustrator – Domínio intermediário.<br>
+                    -Domínio em Git/GitHub- Certificado de 5 horas de estudo.<br>
+                    -Domínio em Terminal Linux- Certificado de 10 horas de estudo.
+                    </p>
+            </div>
+            <div id="objetivo">
+                <p>Objetivo:</p>
+            </div>
+            <div id="objbox">
+                <p id="textobj">
+                    Estágio na área de Tecnologia da Informação no<br>
+                    qual poderei colocar em prática e desenvolver os<br>
+                    conhecimentos acadêmicos, preferencialmente na<br>
+                    área de programação, front end ou back end.
                 </p>
+            </div>
         </div>
-        <div id="objetivo">
-            <p>Objetivo:</p>
-        </div>
-        <div id="objbox">
-            <p id="textobj">
-                Estágio na área de Tecnologia da Informação no<br>
-                qual poderei colocar em prática e desenvolver os<br>
-                conhecimentos acadêmicos, preferencialmente na<br>
-                área de programação, front end ou back end.
-            </p>
-        </div>
-    </div>
+    </main>
 </body>
 </html>
