--- a/contact/contact.html
+++ b/contact/contact.html
@@ -5,9 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="../sideNav.css">
+
     <title>Contatos</title>
 </head>
 <body>
+    <aside>
+        <div id="mySidenav" class="sidenav">
+            <a href="../about/about.html" id="about" >Sobre Mim <img src="../icons/outline_person_black_24dp.png"></a>
+            <a href="../projects/projects.html" id="projects">Projetos &nbsp; &nbsp; <img id="pasta"src="../icons/outline_work_black_24dp.png"></a>
+            <a href="../contact/contact.html" id="contact" class="activeNavSide">Contatos &nbsp; &nbsp; <img id="arroba"src="../icons/baseline_alternate_email_black_18dp.png"></a>
+        </div>
+    </aside>
     <main id="boxcontact">
         <div>
             <p id="contacttitle">Contato:</p>
@@ -35,10 +44,5 @@
             
         </div>
     </main>
-    <footer>
-        <a href="../index.html">
-            <p>Voltar ao Menu</p>
-        </a>
-    </footer>
 </body>
 </html>
