--- a/projects/projects.html
+++ b/projects/projects.html
@@ -5,9 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="projects.css">
+    <link rel="stylesheet" href="../sideNav.css">
+
     <title>Projetos</title>
 </head>
 <body>
+    <aside>
+        <div id="mySidenav" class="sidenav">
+            <a href="../about/about.html" id="about">Sobre Mim <img src="../icons/outline_person_black_24dp.png"></a>
+            <a href="../projects/projects.html" id="projects" class="activeNavSide">Projetos &nbsp; &nbsp; <img id="pasta"src="../icons/outline_work_black_24dp.png"></a>
+            <a href="../contact/contact.html" id="contact">Contatos &nbsp; &nbsp; <img id="arroba"src="../icons/baseline_alternate_email_black_18dp.png"></a>
+        </div>
+    </aside>
     <header>
         <div></div>
         <p>Projetos</p>
